<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#242424"
    android:orientation="vertical"
    android:weightSum="7"
    tools:context=".login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:layout_width="600dp"
                    android:layout_height="550dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/raytechlogo" />
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:weightSum="4">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <EditText
                android:id="@+id/userNameAndSurname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/edit_txt_design_1"
                android:fontFamily="@font/roboto_light"
                android:inputType="textPersonName"
                android:hint="@string/userName"
                android:paddingLeft="20dp"
                android:textColorHint="#DADADA" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <EditText
                android:id="@+id/userPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/edit_txt_design_1"
                android:fontFamily="@font/roboto_light"
                android:inputType="text"
                android:hint="@string/userPhoneNumber"
                android:paddingLeft="20dp"
                android:textColorHint="#DADADA" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <EditText
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/edit_txt_design_1"
                android:fontFamily="@font/roboto_light"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:paddingLeft="20dp"
                android:textColorHint="#DADADA" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <EditText
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/edit_txt_design_1"
                android:fontFamily="@font/roboto_light"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:textColorHint="#DADADA" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/userRegisterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/button_design_1"
            android:fontFamily="@font/roboto_medium"
            android:onClick="userRegisterButton"
            android:paddingLeft="20dp"
            android:text="@string/userRegisterButton"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textColorHint="@color/black"
            android:textSize="23sp"
            app:backgroundTint="@null" />

    </LinearLayout>
</LinearLayout>